[project]
name = "01-article-writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.83.0",
    "crewai-tools>=0.14.0",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.8",
    "langchain-google-genai>=2.0.6",
    "python-dotenv>=1.0.1",
]
